add views and controllers for our three main features

--- a/client/index.html
+++ b/client/index.html
@@ -19,9 +19,9 @@
         <div flex>
           <a ui-sref="profile" md-button ng-if="isAuthenticated()">Profile</a>
         </div>
-        <a ui-sref="login" md-button ng-if="!isAuthenticated()">Log In</a>
-        <a ui-sref="signup" md-button ng-if="!isAuthenticated()">Sign up</a>
-        <a ui-sref="logout" md-button ng-if="isAuthenticated()">Logout</a>
+        <a ui-sref="information" md-button ng-if="!isAuthenticated()">Information</a>
+        <a ui-sref="communication" md-button ng-if="!isAuthenticated()">Communication</a>
+        <a ui-sref="alerts" md-button ng-if="isAuthenticated()">Alerts</a>
       </div>
     </md-toolbar>
     <div ui-view></div>
