--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>MEAN Essential</title>
+    <title>Pastoralist</title>
     <link href="favicon.png" rel="shortcut icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
@@ -15,13 +15,10 @@
   <body layout="column">
     <md-toolbar ng-controller="NavbarController" class="md-whiteframe-z2">
       <div class="md-toolbar-tools" layout-margin layout-padding>
-        <a ui-sref="home" md-button>MEAN Essential</a>
-        <div flex>
-          <a ui-sref="profile" md-button ng-if="isAuthenticated()">Profile</a>
-        </div>
-        <a ui-sref="information" md-button ng-if="!isAuthenticated()">Information</a>
-        <a ui-sref="communication" md-button ng-if="!isAuthenticated()">Communication</a>
-        <a ui-sref="alerts" md-button ng-if="isAuthenticated()">Alerts</a>
+        <a ui-sref="home" md-button>Home</a>
+        <a ui-sref="information" md-button>Information</a>
+        <a ui-sref="communication" md-button>Communication</a>
+        <a ui-sref="alerts" md-button>Alerts</a>
       </div>
     </md-toolbar>
     <div ui-view></div>
@@ -38,16 +35,12 @@
 
     <!-- Application Code -->
     <script src="app.js"></script>
-    <script src="shared/password-match/password-match.js"></script>
     <script src="shared/navbar/navbar.js"></script>
+    <script src="components/alerts/alerts.js"></script>
+    <script src="components/communication/communication.js"></script>
     <script src="components/home/home.js"></script>
-    <script src="components/login/login.js"></script>
-    <script src="components/password/password.js"></script>
-    <script src="components/password/forgot/forgot.js"></script>
-    <script src="components/password/reset/reset.js"></script>
-    <script src="components/signup/signup.js"></script>
-    <script src="components/logout/logout.js"></script>
-    <script src="components/profile/profile.js"></script>
+    <script src="components/information/information.js"></script>
+    <script src="components/weather/weather.js"></script>
 
   </body>
 
