--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,15 @@
 	<button class='home' id='get-alerts'>alerts</button>
 	<button class='home' id='get-messages'>messages</button>
 	<button class='home' id='get-weather'>weather</button>
+	<button class='home' id='back'>back</button>
 
 	<ul id='alerts'></ul>
 
 	<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
 	<script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+	<script type='text/javascript' src='assets/alerts.js'></script>
 	<script type='text/javascript' src='app.js'></script>
+
 
 </body>
 </html>
