--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,9 @@
 	<button class='home' id='get-weather'>weather</button>
 	<button class='home' id='back'>back</button>
 
-	<ul id='alerts'></ul>
+	<div id='alerts'></div>
+	<div id='messages'></div>
+	<div id='weather'></div>
 
 	<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
 	<script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
