[feature] creates icon menue for alerts

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,23 @@
 	<button class='home' id='get-weather'>weather</button>
 	<button class='home' id='back'>back</button>
 
-	<div id='alerts'></div>
+	<div id='alerts'>
+		<div class='send-alerts'>
+			<img src='assets/svgs/icons_black/bl_bridge_water.svg'>
+			<img src='assets/svgs/icons_black/bl_general.svg'>
+			<img src='assets/svgs/icons_black/bl_highwater.svg'>
+			<img src='assets/svgs/icons_black/bl_lowwater.svg'>
+			<img src='assets/svgs/icons_black/bl_landslide.svg'>
+			<img src='assets/svgs/icons_black/bl_lightning.svg'>
+			<img src='assets/svgs/icons_black/bl_pass_closed.svg'>
+			<img src='assets/svgs/icons_black/bl_raincloud.svg'>
+			<img src='assets/svgs/icons_black/bl_snow.svg'>
+			<img src='assets/svgs/icons_black/bl_snowcloud.svg'>
+			<img src='assets/svgs/icons_black/bl_wind.svg'>
+			<img src='assets/svgs/icons_black/bl_tornado.svg'>
+		</div>
+	</div>
+
 	<div id='messages'></div>
 	<div id='weather'></div>
 
