--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,14 @@
 
 	<ul id='alerts'></ul>
 
+	<div class="messages">
+		<form class="message-form">
+			<input id="message-input" placeholder="type your message here"></input>
+			<button type="button" name="message-button">Send</button>
+		</form>
+		<ul id="message-display"></ul>
+	</div>
+
 	<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
 	<script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 	<script type='text/javascript' src='app.js'></script>
