[feature] creates icon alerts list

--- a/client/index.html
+++ b/client/index.html
@@ -16,19 +16,22 @@
 
 	<div id='alerts'>
 		<div class='send-alerts'>
-			<img src='assets/svgs/icons_black/bl_bridge_water.svg'>
-			<img src='assets/svgs/icons_black/bl_general.svg'>
-			<img src='assets/svgs/icons_black/bl_highwater.svg'>
-			<img src='assets/svgs/icons_black/bl_lowwater.svg'>
-			<img src='assets/svgs/icons_black/bl_landslide.svg'>
-			<img src='assets/svgs/icons_black/bl_lightning.svg'>
-			<img src='assets/svgs/icons_black/bl_pass_closed.svg'>
-			<img src='assets/svgs/icons_black/bl_raincloud.svg'>
-			<img src='assets/svgs/icons_black/bl_snow.svg'>
-			<img src='assets/svgs/icons_black/bl_snowcloud.svg'>
-			<img src='assets/svgs/icons_black/bl_wind.svg'>
-			<img src='assets/svgs/icons_black/bl_tornado.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_bridge_water.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_general.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_highwater.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_lowwater.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_landslide.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_lightning.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_pass_closed.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_raincloud.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_snow.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_snowcloud.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_wind.svg'>
+			<img class='col-xs-2' src='assets/svgs/icons_black/bl_tornado.svg'>
 		</div>
+		<br>
+		<ul id='alert-list'><ul>
+
 	</div>
 
 	<div id='messages'></div>
