adds send alert instruction, style icons and buttons

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
 	<meta charset='UTF-8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PastoraLITE</title>
 	<link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'/>
 	<link rel='stylesheet' type='text/css' href='styles.css'/>
@@ -9,6 +10,25 @@
 
 <body>
 	<h1>PastoraLite</h1>
+
+	<div class="direction">
+		<div class="direction-top">
+			<img class="dir-icon" src="assets/svgs/nav/navicon-01.svg" />
+			<img class="dir-icon" src="assets/svgs/nav/navicon-02.svg" />
+			<img class="dir-icon" src="assets/svgs/nav/navicon-03.svg" />
+		</div>
+		<div class="direction-mid">
+			<img class="dir-icon" src="assets/svgs/nav/navicon-04.svg" />
+			<img class="dir-icon" src="assets/svgs/nav/navicon-05.svg" />
+			<img class="dir-icon" src="assets/svgs/nav/navicon-06.svg" />
+		</div>
+		<div class="direction-bottom">
+			<img class="dir-icon" src="assets/svgs/nav/navicon-07.svg" />
+			<img class="dir-icon" src="assets/svgs/nav/navicon-08.svg" />
+			<img class="dir-icon" src="assets/svgs/nav/navicon-09.svg" />
+		</div>
+	</div>
+
 	<div class="nav">
 		<button class='home' id='get-alerts'>alerts</button>
 		<button class='home' id='get-messages'>messages</button>
@@ -16,20 +36,22 @@
 		<button class='home' id='back'>back</button>
 	</div>
 
+
 	<div id='alerts'>
+		<div id='alert-info'>Click on icons below to submit alert</div>
 		<div class='send-alerts'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_bridge_water.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_general.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_highwater.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_lowwater.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_landslide.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_lightning.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_pass_closed.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_raincloud.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_snow.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_snowcloud.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_wind.svg'>
-			<img class='col-xs-2' src='assets/svgs/icons_white/wt_tornado.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_bridge_water.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_general.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_highwater.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_lowwater.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_landslide.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_lightning.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_pass_closed.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_raincloud.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_snow.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_snowcloud.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_wind.svg'>
+			<img class='col-xs-3' src='assets/svgs/icons_white/wt_tornado.svg'>
 		</div>
 		<br>
 		<div class="alert-display">
