adds button class

--- a/client/index.html
+++ b/client/index.html
@@ -30,10 +30,10 @@
 	</div>
 
 	<div class="nav">
-		<button class='home' id='get-alerts'>alerts</button>
-		<button class='home' id='get-messages'>messages</button>
-		<button class='home' id='get-weather'>weather</button>
-		<button class='home' id='back'>back</button>
+		<button class='home btn btn-danger' id='get-alerts'>alerts</button>
+		<button class='home btn btn-warning' id='get-messages'>messages</button>
+		<button class='home btn btn-info' id='get-weather'>weather</button>
+		<button class='home btn btn-primary' id='back'>back</button>
 	</div>
 
 
